# project_2

./: CMakeLists.txt  README.md  triangulation.cpp  triangulation.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  data.json  data.json:Zone.Identifier  json.hpp_Zone.Identifier  main.cpp  main.cpp:Zone.Identifier  strategies.cpp  strategies.h  triangulation  triangulation.cpp  triangulation.cpp:Zone.Identifier  triangulation.h  triangulation.h_Zone.Identifier
